...
        */}
        <NativeTabs.Trigger.Icon
          md="view_kanban"
          src={require('../../assets/brand/kanban-tab.png')}
          renderingMode="template"
        />
        <NativeTabs.Trigger.Label>Board</NativeTabs.Trigger.Label>
      </NativeTabs.Trigger>
    </NativeTabs>
  );
}

